<resources>
    <string name="app_name">KimOnDro</string>
    <string name="ayo_materi">Ayo Memilih Materi</string>
    <string name="descMateriOne">Jenis Koloid</string>
    <string name="materi_1"> Materi 1</string>
    <string name="meteri_2"> Materi 2</string>
    <string name="descMateriTwo">Sifat-sifat Koloid</string>
    <string name="materi_3"> Materi 3</string>
    <string name="descMateriThre">Pembuatan Koloid</string>
    <string name="materi_4"> Materi 4</string>
    <string name="descMateriFour">Peranan Koloid</string>
    <string name="app_subname">Media Pembelajaran Sistem Koloid</string>

    <string-array name="materi_satu">
        <item>
            Dalam kehidupan sehari-hari kita sering menemukan zat yang memiliki sifat berbentuk campuran homogen namun tidak bening,
            atau keruh, seperti berbagai jenis minuman, susu atau pylox. Berdasarkan jenis fasa pendispersi, yaitu zat yang memiliki
            jumlah lebih banyak dan fasa zat yang terdispersi koloid terbagi menjadi delapan macam.
        </item>
    </string-array>

    <string name="sub_one">
        Fenomena Kabut
        Fase terdispersinya air+medium pendipersinya gas aerosol/kabut
    </string>

    <string name="sub_two">
        Fenomena Asap
        Fase terdispersinya debu (padat) + medium pendispersinya udara (gas) Asap
    </string>

    <string name="sub_thre">
        Buih Cair
        Fase terdispersinya udara (gas) + medium pendispersinya putih telur (cair) Buih Krim
    </string>

    <string name="sub_four">
        Emulsi
        Fase terdispersinya partikel lemak susu (cair) + medium pendispersinya air (cair) A
    </string>

    <string name="sub_five">
        Sol Cair
        Fase terdispersinya resin/latex (padat) + medium pendispersinya solvent hidrokarbon (cair) Cat
    </string>

    <string name="sub_six">
        Buih Padat
        Fase terdispersinya udara (gas) + medium pendispersinya gelatin (padat) Marshmallow
    </string>

    <string name="sub_seven">
        Emulsi Padat
        Fase terdispersinya susu (cair) + medium pendispersinya lemak hewan padat Mentega
    </string>

    <string name="sub_eight">
        Sol Padat
        Fase terdispersinya pasir kuarsa (padat) + CaCO3 (padat) Kaca
    </string>

    <string-array name="materi_dua">
        <item>
            Koloid mempunyai sifat-sifat yang khas, misalnya menunjukkan efek Tyndall, gerak Brown, dan mempunyai muatan listrik.
            1. Efek Tyndall
            Gejala pemantulan dan pembauran cahaya oleh partikel dispersi sistem koloid disebut efek Tyndall. Gejala ini pertama kali
            ditemukan oleh Michael Faraday kemudian diselidiki lebih lanjut oleh John Tyndall (1820 – 1893), seorang ahli Fisika bangsa
            Inggris. Efek Tyndall dapat digunakan untuk membedakan larutan sejati dari koloid.
        </item>
        <item>
            2. Gerak Brown
            Gerakan partikel koloid yang tidak menentu arahnya ini pertama kali ditemukan oleh seorang sarjana Biologi bernama Robert Brown
            (1773-1859). Gerak Brown adalah gerak lurus partikel-partikel koloid yang arahnya tidak tentu yang disebabkan oleh tumbukan dari
            molekul-molekul medium pendispersi dengan partikel-partikel koloid. Gerak Brown bisa berlangsung terus karena gaya yang bekerja
            pada partikel itu dihasilkan terus menerus oleh tumbukan partikel dengan partikel dan partikel dengan molekul medium pendispersi.
            Hal ini menyebabkan berkurangnya efek gaya gravitasi bumi terhadap partikel fasa dispersi.
        </item>
        <item>
            3. Adsorpsi
            Adsorpsi adalah peristiwa di mana suatu zat menempel pada permukaan zat lain, seperti ion H+ dan OH- dari medium pendispersi.
            Untuk berlangsungnya adsorpsi, minimum harus ada dua macam zat, yaitu zat yang tertarik disebut adsorbat, dan zat yang menarik
            disebut adsorban. Apabila terjadi penyerapan ion pada permukaan partikel koloid maka partikel koloid dapat bermuatan listrik
            yang muatannya ditentukan oleh muatan ion-ion yang mengelilinginya. Contoh: Koloid Fe(OH)3 dalam air menyerap ion hidrogen
            (ion H+) sehinggapartikel bermuatan positif, sedangkan koloid As2S3 menyerap ion hidroksida (ion OH-) sehingga partikel
            bermuatan negatif.
        </item>
        <item>
            4. Elektroforesis
            Elektroforesis adalah peristiwa mengalirnya partikel-partikel koloid menuju elektroda, bergeraknya partikel koloid ke dalam
            satu elektroda menunjukkan bahwa partikel-partikel koloid bermuatan listrik. Elektroforesis dapat dipakai untuk memisahkan
            protein-protein dalam larutan. Muatan pada protein berbeda-beda, tergantung pH. Dengan membuat pH larutan tertentu (misalnya dalam larutan penyangga), pemisahan molekul-molekul protein yang berlainan jenis terjadi.
        </item>
        <item>
            5. Koagulasi
            Koagulasi adalah penggumpalan koloid yang disebabkan oleh penambahan elektrolit atau terjadinya perubahan fisik melalui
            cara mekanik. Koagulasi dengan penambahan zat kimia Ion yang efektif untuk menggumpalkan koloid ialah ion yang muatannya
            berlawanan dengan muatan koloid.
            Contoh :
            1) Koloid Fe(OH)3 dicampur dengan koloid As2S3.
            2) Sol emas yang bermuatan negatif dapat dikoagulasikan dengan NaCl, CaCl2, atau AlCl3
            3) Partikel-partikel karet dalam lateks digumpalkan dengan penambahan asam cuka.

            Apakah kamu pernah berjalan-jalan di sekitar muara sungai, jika pernah mungkin kamu pernah melihat daratan kecil di tengah
            muara tersebut. Daratan kecil tersebut sering dinamai sebagai delta.Delta terbentuk dari pengendapan partikel koloid, karena
            partikel koloid yang bermuatan mengalami reaksi dengan muatan lawannya ketika partikel tersebut terbawa oleh air sungai dan
            bertemu dengan air laut yang kaya dengan elektrolit. Hal itu terjadi karena keberadaan ion pasangannya menyebabkan partikel
            koloid berkumpul bersama akibat menghilangkannya tolakan muatan antar partikel.
        </item>
        <item>
            6. Liofil dan Liofob
            Berdasarkan daya tarik-menarik antar partikel fase terdispersi dan medium pendispersinya, sol dibedakan menjadi sol liofil
            dan sol liofob. Sol liofil adalah sol yang fase terdispersinya mempunyai kemampuan menarik medium pendispersi. Contoh, gelatin
            dalam air dan putih telur dalam air. Sol liofob adalah sol yang fase terdispersinya tidak menarik medium pendispersi. Contoh
            As2S3 dalam air, garam sulfida dalam air, dan belerang dalam air.Perbedaan sol  liofil dengan sol liofob dapat dilihat pada
            tabel berikut.
        </item>
    </string-array>
    <string-array name="materi_tiga">
        <item>
            Pada prinsipnya pembuatan koloid adalah mengubah partikel-partikel berukuran ion, atom, atau molekul menjadi partikel-partikel
            koloid atau mengubah partikel besar menjadi koloid. Untuk memperoleh suatu sistem koloid dapat dilakukan dengan metode kondensasi
            dan dispersi.
        </item>
        <item>
            1. Metode kondensasi
               Metode kondensasi merupakan metode untuk membuat partikel koloid dari penggabungan partikel-partikel larutan. Hal ini dapat dilakukan dengan reaksi kimia (dekomposisi rangkap, hidrolisis, dan redoks) penggantian pelarut
               a. Dekomposisi Rangkap
                  Contoh:
                  1. Sol As2S3 dibuat dengan reaksi antara larutan H3AsO3 dengan larutan H2S.
                     2H3AsO3(aq) + 3H2S(aq) As2S3(koloid) + 6H2O(l)
                  2. Sol AgCl dibuat dengan mereaksikan larutan perak nitrat encer dengan larutan HCl encer.
                     AgNO3(aq) + HCl  AgCl(koloid) + HNO3(aq)
               b. Redoks
                  Reaksi redoks adalah reaksi yang disertai kenaikan dan penurunan bilangan oksidasi (oksidasi dan reduksi).
                    Contoh:
                    1. Sol belerang dibuat dengan mengalirkan gas H2S ke dalam larutan SO2.
                       H2S(g) + SO2(aq)  2H2O(l) + 3S(koloid)
                    2. Sol emas dibuat dari reaksi antara larutan HAuCl4 dengan larutan K2CO3 dan HCHO (formaldehida).
                       2HAuCl4(aq) + 6K2CO3(aq) + 3HCHO(aq)  2Au(koloid) + 5CO2 + 8KCl(aq) + 3HCOOK(aq)+ KHCO3 (aq) + 2H2O(l)

               c. Hidrolisis
                  Hidrolisis merupakan reaksi suatu zat dengan air.
                  Contoh:
                  Sol Fe(OH)3 dibuat dari hidrolisis FeCl3 dalam air mendidih.
                  FeCl3(aq) + 3H2O(l)  Fe(OH)3(koloid) + 3HCl (aq)
                  Penggantian Pelarut
                  Penggantian pelarut juga dapat menghasilkan suatu koloid. Contohnya yaitu apabila larutan jenuh kalsium asetat dicampur
                  dengan alkohol akan terbentuk suatu koloid berupa gel.
        </item>
        <item>
            2.  Metode Dispersi
                Metode dispersi merupakan metode pembuatan koloid yaitu partikel kasar dipecah menjadi partikel koloid.
                Metode ini dapat dilakukan dengan mekanik, peptisasi atau loncatan bunga listrik (busur bredig).
                a. Cara Mekanik
                   Cara mekanik dilakukan dengan menggerus partikel kasar dengan penggiling koloid sampai diperoleh kehalusan pada tingkat
                   tertentu selanjutnya didispersikan ke dalam medium pendispersi.
                   Contoh:
                   Sol belerang dibuat dengan menggerus serbuk belerang sampai halus kemudian dicampur dengan air.
                b. Peptisasi
                   Cara peptisasi yaitu pembuatan koloid dari partikel kasar dari suatu endapan dengan zat pemeptisasi (pemecah).
                   Contoh:
                   Agar-agar dipeptisasi oleh air, nitroselulosa oleh aseton, dan karet oleh bensin. Endapan NIS dipeptisasi oleh H2S, endapan Al(OH)3 oleh ALCl3, dan endapan AgCl oleh HCl.
                c. Busur Bredig
                   Cara busur bredig digunakan untuk membuat sol logam, seperti Ag, Au, dan Pt dengan bantuan loncatan listrik. Logam yang
                   akan dijadikan koloid digunakan sebagai elektrode, selanjutnya kedua elektrode dimasukkan dalam medium pendispersi
                   dan diberi loncatan listrik tegangan tinggi. Akibatnya, atom-atom akan terlempar ke dalam air (medium pendispersi) dan
                   mengalami kondensasi membentuk partikel koloid.
        </item>
    </string-array>
</resources>
